Aula 2 NLW#3 Concluída!

--- a/orphanage.html
+++ b/orphanage.html
@@ -44,28 +44,28 @@
                     
                     <div class="images">
 
-                        <button class="active" type="button">
-                            <img src="./public/images/home.jpg" alt="Lar das Meninas">
+                        <button onclick="selectImage(event)"  class="active" type="button">
+                            <img src="https://source.unsplash.com/random?id=1" alt="Lar das Meninas">
                         </button>
 
-                        <button  type="button">
-                            <img src="./public/images/home.jpg" alt="Lar das Meninas">
+                        <button onclick="selectImage(event)"  type="button">
+                            <img src="https://source.unsplash.com/random?id=2" alt="Lar das Meninas">
                         </button>
 
-                        <button  type="button">
-                            <img src="./public/images/home.jpg" alt="Lar das Meninas">
+                        <button onclick="selectImage(event)"  type="button">
+                            <img src="https://source.unsplash.com/random?id=3" alt="Lar das Meninas">
                         </button>
 
-                        <button  type="button">
-                            <img src="./public/images/home.jpg" alt="Lar das Meninas">
+                        <button onclick="selectImage(event)"  type="button">
+                            <img src="https://source.unsplash.com/random?id=4" alt="Lar das Meninas">
                         </button>
 
-                        <button  type="button">
-                            <img src="./public/images/home.jpg" alt="Lar das Meninas">
+                        <button onclick="selectImage(event)"  type="button">
+                            <img src="https://source.unsplash.com/random?id=5" alt="Lar das Meninas">
                         </button>
 
-                        <button  type="button">
-                            <img src="./public/images/home.jpg" alt="Lar das Meninas">
+                        <button onclick="selectImage(event)"  type="button">
+                            <img src="https://source.unsplash.com/random?id=6" alt="Lar das Meninas">
                         </button>
 
                     </div>
@@ -80,6 +80,7 @@
 
                         <div class="map-container">
                             <div id="mapid">
+                            
                             </div>
                             <footer>
                                 <a href="">Ver rotas no Google Maps</a>
@@ -91,12 +92,12 @@
                         <h2>Instruções para visita</h2>
 
                         <p>Veja como se sentir a vontade e traga muito amor e paciência para dar.</p>
-                        <div id="open-details">
-                            <div id="hour">
+                        <div class="open-details">
+                            <div class="hour">
                                 <img src="./public/images/clock.svg" alt="Horários">
                                 Horário de visitas Das 18h até as 20h
                             </div>
-                            <div id="open-on-weekends">
+                            <div class="open-on-weekends">
                                 <img src="./public/images/info.svg" alt="Informação">
                                 Atendemos no fim de semana
                             </div>
